--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   material_symbols_icons: ^4.2867.0
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
