--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   material_symbols_icons: ^4.2867.0
   http: ^1.5.0
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
