--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   material_symbols_icons: ^4.2867.0
   http: ^1.5.0
   web_socket_channel: ^2.4.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
